--- a/ExploratoryAnalysis.ipynb
+++ b/ExploratoryAnalysis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOk2iiOBeWGSsycowZi/gGt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,13 +24,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/alirezakavianifar/gitTutorial/blob/developer/ExploratoryAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "gzGEtOm5lg7p"
-      }
     },
     {
       "cell_type": "markdown",
@@ -100,7 +92,7 @@
         "- **Title:** Boltzmann (Softmax) Exploration\n",
         "- **Content:**\n",
         "  - Description: Actions are selected based on a probability distribution determined by Q-values and temperature.\n",
-        "  - Formula: P(a) = exp(Q(s, a) / T) / Σ exp(Q(s, a') / T)\n",
+        "  - Formula: P(a) = $$exp(Q(s, a) / T) / Σ exp(Q(s, a') / T)$$\n",
         "  - Pros: Smooth transition between exploration and exploitation.\n",
         "  - Cons: Computationally expensive with large action spaces.\n",
         "\n",
@@ -110,7 +102,7 @@
         "- **Title:** Upper Confidence Bound (UCB)\n",
         "- **Content:**\n",
         "  - Description: Selects actions based on both the value estimates and the uncertainty in those estimates.\n",
-        "  - Formula: A = argmax [Q(s, a) + c * sqrt(log(t) / N(a))]\n",
+        "  - Formula: A = $$argmax [Q(s, a) + c * sqrt(log(t) / N(a))]$$\n",
         "  - Pros: Efficient balance of exploration and exploitation.\n",
         "  - Cons: Requires careful tuning of parameters.\n",
         "\n",
@@ -299,13 +291,13 @@
         "- **Definition**: A state represents a specific configuration of the software system.\n",
         "- **State Space**: The set of all possible configurations of the system.\n",
         "- **State Representation**: Each state can be represented as a vector where each element corresponds to a decision variable of the system.\n",
-        "  - For example, if your system has decision variables such as cache size, thread count, and logging level, a state might look like \\( s = [\\text{cache size}, \\text{thread count}, \\text{logging level}] \\).\n",
+        "  - For example, if your system has decision variables such as cache size, thread count, and logging level, a state might look like \\($$ s = [\\text{cache size}, \\text{thread count}, \\text{logging level}] $$\\).\n",
         "\n",
         "### Actions\n",
         "- **Definition**: An action represents a change in one or more decision variables of the system, leading to a new configuration.\n",
         "- **Action Space**: The set of all possible changes that can be made to the system's configuration.\n",
         "- **Action Representation**: Actions can be discrete and defined as modifications to specific elements of the state vector.\n",
-        "  - For example, actions might be \\( a_1 = \\text{increase cache size} \\), \\( a_2 = \\text{decrease thread count} \\), etc.\n",
+        "  - For example, actions might be \\( $$a_1 = \\text{increase cache size} $$\\), \\( $$a_2 = \\text{decrease thread count} $$\\), etc.\n",
         "\n",
         "### Rewards\n",
         "- **Definition**: A reward quantifies the quality properties of the system after applying an action and transitioning to a new state.\n",
@@ -317,16 +309,16 @@
         "Suppose your software system's configuration impacts its performance and resource utilization. Here’s how you might define the states, actions, and rewards:\n",
         "\n",
         "1. **States**:\n",
-        "   - **State Vector**: \\( s = [\\text{cache size}, \\text{thread count}, \\text{logging level}] \\)\n",
-        "   - **Example State**: \\( s = [512 \\text{MB}, 8 \\text{threads}, \\text{INFO}] \\)\n",
+        "   - **State Vector**: \\( $$s = [\\text{cache size}, \\text{thread count}, \\text{logging level}] $$\\)\n",
+        "   - **Example State**: \\( $$s = [512 \\text{MB}, 8 \\text{threads}, \\text{INFO}] $$\\)\n",
         "\n",
         "2. **Actions**:\n",
-        "   - **Action Set**: \\( a_1 = \\text{increase cache size by 128 MB}, a_2 = \\text{decrease thread count by 1}, a_3 = \\text{set logging level to DEBUG} \\)\n",
-        "   - **Example Action**: \\( a = \\text{increase cache size by 128 MB} \\)\n",
+        "   - **Action Set**: \\($$ a_1 = \\text{increase cache size by 128 MB}, a_2 = \\text{decrease thread count by 1}, a_3 = \\text{set logging level to DEBUG} $$\\)\n",
+        "   - **Example Action**: \\( $$a = \\text{increase cache size by 128 MB} $$\\)\n",
         "\n",
         "3. **Rewards**:\n",
-        "   - **Reward Function**: \\( r(s, a, s') = \\text{performance}(s') - \\alpha \\cdot \\text{resource usage}(s') \\)\n",
-        "   - **Example Reward**: If increasing cache size improves performance by 10 units but increases resource usage cost by 2 units, the reward could be \\( r = 10 - 2\\alpha \\)\n",
+        "   - **Reward Function**: \\( $$r(s, a, s') = \\text{performance}(s') - \\alpha \\cdot \\text{resource usage}(s') $$\\)\n",
+        "   - **Example Reward**: If increasing cache size improves performance by 10 units but increases resource usage cost by 2 units, the reward could be \\($$ r = 10 - 2\\alpha $$\\)\n",
         "\n",
         "### Steps to Model the System in RL:\n",
         "\n",
@@ -470,9 +462,9 @@
         "\n",
         "#### Transition:\n",
         "\n",
-        "- Current State: \\( s = [256 \\text{ MB}, 4 \\text{ threads}, \\text{INFO}] \\)\n",
+        "- Current State: \\( $$s = [256 \\text{ MB}, 4 \\text{ threads}, \\text{INFO}] $$\\)\n",
         "- Action Applied: Increase Cache Size\n",
-        "- New State: \\( s' = [512 \\text{ MB}, 4 \\text{ threads}, \\text{INFO}] \\)\n",
+        "- New State: \\($$ s' = [512 \\text{ MB}, 4 \\text{ threads}, \\text{INFO}] $$\\)\n",
         "\n",
         "### Pseudo-Code for Environment:\n",
         "```python\n",
@@ -555,22 +547,22 @@
         "#### States:\n",
         "- **Definition**: States represent the current performance and quality metrics of the system based on its configuration.\n",
         "- **State Representation**: You can represent the state as a vector of performance metrics, resource usage, and other relevant system characteristics.\n",
-        "  - Example: \\( s = [\\text{CPU usage}, \\text{Memory usage}, \\text{Response time}, \\text{Error rate}] \\)\n",
+        "  - Example: \\( $$s = [\\text{CPU usage}, \\text{Memory usage}, \\text{Response time}, \\text{Error rate}] $$\\)\n",
         "\n",
         "#### Actions:\n",
         "- **Definition**: Actions correspond to selecting a specific configuration of the system.\n",
         "- **Action Representation**: Each action is a unique vector representing a possible configuration.\n",
-        "  - Example: \\( a = [\\text{cache size}, \\text{thread count}, \\text{logging level}] \\)\n",
+        "  - Example: \\( $$a = [\\text{cache size}, \\text{thread count}, \\text{logging level}] $$\\)\n",
         "- **Action Space**: The set of all possible configurations.\n",
         "  - For the given example, with 4 cache sizes, 4 thread counts, and 5 logging levels, the total number of actions is:\n",
-        "    \\[\n",
+        "    $$\\[\n",
         "    \\text{Total Actions} = 4 \\times 4 \\times 5 = 80\n",
-        "    \\]\n",
+        "    \\]$$\n",
         "\n",
         "#### Rewards:\n",
         "- **Definition**: Rewards quantify the quality of the system performance under a particular configuration.\n",
         "- **Reward Function**: The function that maps state-action pairs to a numerical value reflecting the system’s performance or quality properties.\n",
-        "  - Example: \\( r = \\text{performance metric} - \\text{resource usage penalty} \\)\n",
+        "  - Example: \\($$ r = \\text{performance metric} - \\text{resource usage penalty} $$\\)\n",
         "\n",
         "### Example Framework with Configuration as Actions\n",
         "\n",
@@ -581,15 +573,15 @@
         "2. **Action Space**:\n",
         "   - Each action is a unique configuration.\n",
         "   - Example action vectors:\n",
-        "     - \\( a_1 = [128 \\text{ MB}, 2 \\text{ threads}, \\text{OFF}] \\)\n",
-        "     - \\( a_2 = [256 \\text{ MB}, 4 \\text{ threads}, \\text{ERROR}] \\)\n",
+        "     - \\($$ a_1 = [128 \\text{ MB}, 2 \\text{ threads}, \\text{OFF}] $$\\)\n",
+        "     - \\($$ a_2 = [256 \\text{ MB}, 4 \\text{ threads}, \\text{ERROR}] $$\\)\n",
         "     - ...\n",
-        "     - \\( a_{80} = [1024 \\text{ MB}, 16 \\text{ threads}, \\text{DEBUG}] \\)\n",
+        "     - \\( $$a_{80} = [1024 \\text{ MB}, 16 \\text{ threads}, \\text{DEBUG}] $$\\)\n",
         "\n",
         "3. **Rewards**:\n",
         "   - A scalar value based on the system’s performance and resource usage under the chosen configuration.\n",
         "   - Example reward function:\n",
-        "     - \\( r = \\text{performance metric} - \\alpha \\times \\text{resource usage} \\)\n",
+        "     - \\( $$r = \\text{performance metric} - \\alpha \\times \\text{resource usage} $$\\)\n",
         "\n",
         "### Pseudo-Code for Environment with Configuration as Actions\n",
         "\n",
@@ -734,13 +726,13 @@
         "### Upper Confidence Bound (UCB)\n",
         "**UCB** is an action selection method that balances exploration and exploitation by considering both the estimated reward and the uncertainty (or confidence interval) around that estimate. The key idea is to select actions that have the highest upper confidence bound, which is calculated as:\n",
         "\n",
-        "\\[ \\text{UCB}(a) = \\hat{Q}(a) + c \\sqrt{\\frac{\\ln t}{N(a)}} \\]\n",
+        "\\[$$\\text{UCB}(a) = \\hat{Q}(a) + c \\sqrt{\\frac{\\ln t}{N(a)}} $$\\]\n",
         "\n",
         "where:\n",
-        "- \\(\\hat{Q}(a)\\) is the estimated average reward for action \\(a\\).\n",
-        "- \\(c\\) is a parameter that controls the degree of exploration.\n",
-        "- \\(t\\) is the current time step.\n",
-        "- \\(N(a)\\) is the number of times action \\(a\\) has been selected.\n",
+        "- \\$\\hat{Q}(a)\\$ is the estimated average reward for action \\(a\\).\n",
+        "- \\$(c\\$) is a parameter that controls the degree of exploration.\n",
+        "- \\$(t\\$) is the current time step.\n",
+        "- \\$N(a)$ is the number of times action \\(a\\) has been selected.\n",
         "\n",
         "**Advantages**:\n",
         "- **Adaptability**: UCB can adapt to changes in reward distributions because it continuously updates the estimates of rewards and their confidence intervals.\n",
@@ -840,7 +832,7 @@
         "2. **Adaptive Methods**: These methods are designed to adapt to changes in reward distributions over time.\n",
         "\n",
         "#### Static Methods\n",
-        "- **Epsilon-Greedy**: Selects a random action with probability \\(\\epsilon\\) and the best-known action with probability \\(1 - \\epsilon\\). It does not inherently adapt to changing reward distributions.\n",
+        "- **Epsilon-Greedy**: Selects a random action with probability \\($\\epsilon$\\) and the best-known action with probability \\(1 - $\\epsilon$\\). It does not inherently adapt to changing reward distributions.\n",
         "\n",
         "- **Softmax (Boltzmann)**: Selects actions based on a probability distribution that favors higher estimated rewards. The distribution is controlled by a temperature parameter. It also does not inherently adapt to changing reward distributions.\n",
         "\n",
@@ -851,13 +843,13 @@
         "  - **Adaptability**: High. UCB constantly updates reward estimates and their associated confidence intervals.\n",
         "  - **Exploration-Exploitation Balance**: Yes. Balances the need to explore uncertain actions and exploit known good actions.\n",
         "  - **Formula**:\n",
-        "    \\[\n",
+        "    $\\[\n",
         "    \\text{UCB}(a) = \\hat{Q}(a) + c \\sqrt{\\frac{\\ln t}{N(a)}}\n",
-        "    \\]\n",
-        "    - \\(\\hat{Q}(a)\\): Estimated average reward for action \\(a\\).\n",
-        "    - \\(c\\): Parameter controlling exploration.\n",
-        "    - \\(t\\): Current time step.\n",
-        "    - \\(N(a)\\): Number of times action \\(a\\) has been selected.\n",
+        "    \\]$\n",
+        "    - $\\(\\hat{Q}(a)\\)$: Estimated average reward for action \\(a\\).\n",
+        "    - \\($c\\$): Parameter controlling exploration.\n",
+        "    - \\($t\\$): Current time step.\n",
+        "    - \\($N(a)\\$): Number of times action \\(a\\) has been selected.\n",
         "\n",
         "- **Thompson Sampling**\n",
         "  - **Adaptability**: High. Uses Bayesian updating to maintain and update probability distributions for the expected rewards of actions.\n",
