--- a/ExplorationAnalysis2.ipynb
+++ b/ExplorationAnalysis2.ipynb
@@ -5,9 +5,13 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "3hxj0yjQ8xDJ"
+        "Qw9W9W05HuvA",
+        "3hxj0yjQ8xDJ",
+        "ZmjwA2hHGKyz",
+        "atiTooE8QFcl",
+        "2CY1LXbURS4F"
       ],
-      "authorship_tag": "ABX9TyNXMgUlCWYbzbIQjuAeit3C",
+      "authorship_tag": "ABX9TyMGsEnPkST/WAUfr5jQj/db",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,6 +455,147 @@
       ],
       "metadata": {
         "id": "QrgZ7iWoGDs8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Different action selection policies"
+      ],
+      "metadata": {
+        "id": "atiTooE8QFcl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Yes, all of the mentioned action selection policies aim to balance exploration and exploitation, which is a fundamental challenge in reinforcement learning. Here's how each method contributes to this balance:\n",
+        "\n",
+        "1. **Epsilon-Greedy**:\n",
+        "   - **Exploration**: With probability epsilon, a random action is chosen.\n",
+        "   - **Exploitation**: With probability 1-epsilon, the action with the highest estimated Q-value is chosen.\n",
+        "\n",
+        "2. **Boltzmann (Softmax) Exploration**:\n",
+        "   - **Exploration**: Higher temperature values make the action selection more random, promoting exploration.\n",
+        "   - **Exploitation**: Lower temperature values make the action selection more deterministic, favoring actions with higher Q-values.\n",
+        "\n",
+        "3. **Upper Confidence Bound (UCB)**:\n",
+        "   - **Exploration**: Actions with higher uncertainty (less visited) are chosen more frequently.\n",
+        "   - **Exploitation**: Actions with higher estimated Q-values are preferred, especially as more information is gathered.\n",
+        "\n",
+        "4. **Thompson Sampling**:\n",
+        "   - **Exploration**: Actions are sampled from a probability distribution over Q-values, naturally incorporating exploration.\n",
+        "   - **Exploitation**: The distribution is updated based on observed rewards, gradually favoring better actions.\n",
+        "\n",
+        "5. **Entropy-Based Exploration**:\n",
+        "   - **Exploration**: Encourages actions that lead to states with higher uncertainty or entropy, promoting diverse state visits.\n",
+        "   - **Exploitation**: Actions are still chosen based on their expected Q-values, balancing the need to find the best action.\n",
+        "\n",
+        "6. **Bayesian Q-Learning**:\n",
+        "   - **Exploration**: Samples from the posterior distribution over Q-values reflect uncertainty and encourage exploration.\n",
+        "   - **Exploitation**: As the model updates and uncertainty reduces, it naturally favors actions with higher expected rewards.\n",
+        "\n",
+        "7. **Noisy Networks**:\n",
+        "   - **Exploration**: Adding noise to the network weights makes the Q-value predictions stochastic, leading to varied action choices.\n",
+        "   - **Exploitation**: The noise level can be adjusted to control the balance, reducing as the learning progresses.\n",
+        "\n",
+        "8. **Bootstrapped DQNs**:\n",
+        "   - **Exploration**: Multiple Q-networks with different initializations provide diverse action-value estimates.\n",
+        "   - **Exploitation**: Aggregating the Q-values from multiple networks can guide towards the best actions over time.\n",
+        "\n",
+        "By carefully designing and tuning these policies, a reinforcement learning agent can effectively explore the environment to discover new strategies while also exploiting known information to maximize rewards. Each method provides a different mechanism for this balance, which can be more or less effective depending on the specific problem and environment."
+      ],
+      "metadata": {
+        "id": "Lyb42vHAnarZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Which action selection policy is suitable for environments that change constantly?"
+      ],
+      "metadata": {
+        "id": "2CY1LXbURS4F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When the reward distribution for a configuration changes over time, it is crucial to use an action selection method that adapts to these changes. Among the action selection methods mentioned, **Upper Confidence Bound (UCB)** and **Thompson Sampling** are particularly well-suited for this scenario because they explicitly take into account the uncertainty and variability in rewards.\n",
+        "\n",
+        "### Upper Confidence Bound (UCB)\n",
+        "**UCB** is an action selection method that balances exploration and exploitation by considering both the estimated reward and the uncertainty (or confidence interval) around that estimate. The key idea is to select actions that have the highest upper confidence bound, which is calculated as:\n",
+        "\n",
+        "\\[$$\\text{UCB}(a) = \\hat{Q}(a) + c \\sqrt{\\frac{\\ln t}{N(a)}} $$\\]\n",
+        "\n",
+        "where:\n",
+        "- \\$\\hat{Q}(a)\\$ is the estimated average reward for action \\(a\\).\n",
+        "- \\$(c\\$) is a parameter that controls the degree of exploration.\n",
+        "- \\$(t\\$) is the current time step.\n",
+        "- \\$N(a)$ is the number of times action \\(a\\) has been selected.\n",
+        "\n",
+        "**Advantages**:\n",
+        "- **Adaptability**: UCB can adapt to changes in reward distributions because it continuously updates the estimates of rewards and their confidence intervals.\n",
+        "- **Exploration-Exploitation Balance**: It naturally balances exploration and exploitation by exploring actions with high uncertainty.\n",
+        "\n",
+        "### Thompson Sampling\n",
+        "**Thompson Sampling** is a Bayesian approach to action selection. It maintains a probability distribution for the expected reward of each action and samples from these distributions to select actions. This method updates the distributions based on observed rewards, which allows it to adapt to changes over time.\n",
+        "\n",
+        "**Advantages**:\n",
+        "- **Flexibility**: Thompson Sampling can handle non-stationary reward distributions by updating the belief (posterior) distributions as new data is observed.\n",
+        "- **Probabilistic Approach**: It selects actions based on the probability of being optimal, inherently balancing exploration and exploitation.\n",
+        "\n",
+        "### Comparison with Other Methods\n",
+        "- **Epsilon-Greedy**: Does not inherently account for changes in reward distributions. It explores randomly with a fixed probability, which may not be efficient for adapting to changing environments.\n",
+        "- **Softmax (Boltzmann)**: Similar to epsilon-greedy, it does not inherently adapt to changes in reward distributions but instead relies on temperature parameters to control exploration-exploitation trade-offs.\n",
+        "- **Bayesian Exploration**: While it uses Bayesian principles like Thompson Sampling, its implementation can be more complex and less straightforward in terms of action selection.\n",
+        "\n",
+        "### Example Scenario\n",
+        "Consider a system where configurations change in performance over time due to varying workloads or external factors. Using UCB or Thompson Sampling would enable the RL agent to dynamically adapt to these changes and select configurations that maximize long-term performance.\n",
+        "\n",
+        "#### Pseudo-Code Example for UCB in a Dynamic Environment\n",
+        "```python\n",
+        "import numpy as np\n",
+        "\n",
+        "class UCBEnvironment:\n",
+        "    def __init__(self, n_actions):\n",
+        "        self.n_actions = n_actions\n",
+        "        self.action_counts = np.zeros(n_actions)\n",
+        "        self.action_rewards = np.zeros(n_actions)\n",
+        "        self.total_steps = 0\n",
+        "\n",
+        "    def select_action(self):\n",
+        "        if self.total_steps < self.n_actions:\n",
+        "            return self.total_steps  # Explore each action once initially\n",
+        "        ucb_values = self.action_rewards / (self.action_counts + 1e-5) + np.sqrt(\n",
+        "            2 * np.log(self.total_steps + 1) / (self.action_counts + 1e-5))\n",
+        "        return np.argmax(ucb_values)\n",
+        "\n",
+        "    def update(self, action, reward):\n",
+        "        self.total_steps += 1\n",
+        "        self.action_counts[action] += 1\n",
+        "        self.action_rewards[action] += (reward - self.action_rewards[action]) / self.action_counts[action]\n",
+        "\n",
+        "# Initialize environment\n",
+        "n_actions = 80  # Number of possible configurations\n",
+        "env = UCBEnvironment(n_actions)\n",
+        "\n",
+        "for step in range(10000):\n",
+        "    action = env.select_action()\n",
+        "    reward = simulate_reward(action)  # Replace with actual reward simulation\n",
+        "    env.update(action, reward)\n",
+        "\n",
+        "def simulate_reward(action):\n",
+        "    # Simulate changing reward distributions\n",
+        "    return np.random.normal(loc=action % 10, scale=1.0)\n",
+        "\n",
+        "```\n",
+        "\n",
+        "### Conclusion\n",
+        "Both UCB and Thompson Sampling are highly suitable for environments where reward distributions change over time. They provide mechanisms to continuously update and adapt to new information, making them robust choices for dynamic systems. Choosing between the two depends on your specific requirements and implementation preferences, but either will likely outperform more static methods like epsilon-greedy or Softmax in non-stationary environments."
+      ],
+      "metadata": {
+        "id": "hOq8bY_LxG1S"
       }
     }
   ]
