--- a/Adfq.ipynb
+++ b/Adfq.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ+Xi4cBewUlnTMV2CsNwJ",
+      "authorship_tag": "ABX9TyPreion/5RqsjdLbAi0T1Xh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,6 +549,126 @@
       ],
       "metadata": {
         "id": "Z6pIODeYDsaa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The article evaluates the Deep Assumed Density Filtering Q-learning (Deep ADFQ) algorithm through a series of case studies focused on different environments and scenarios. Here are the key case studies discussed:\n",
+        "\n",
+        "1. **Tabular Domains**:\n",
+        "   - **Cliff Walking**: A classic reinforcement learning benchmark where the agent must navigate a grid world to reach a goal while avoiding a \"cliff\" area that incurs a high negative reward.\n",
+        "   - **Frozen Lake**: Another grid world scenario where the agent must navigate a slippery frozen lake to reach a goal, dealing with both the stochasticity of the environment and potential pitfalls.\n",
+        "\n",
+        "2. **Function Approximation Domains**:\n",
+        "   - **Mountain Car**: A continuous control problem where the agent must drive an underpowered car up a hill. The agent receives a reward when it successfully reaches the top of the hill.\n",
+        "   - **Cart Pole**: A balance control problem where the agent must balance a pole on a moving cart. The agent receives a reward for each time step the pole remains upright.\n",
+        "\n",
+        "3. **Deep Learning Domains**:\n",
+        "   - **Atari Games**: The article specifically mentions using a subset of Atari games from the Arcade Learning Environment to test the performance of Deep ADFQ in more complex, high-dimensional state spaces typical of deep reinforcement learning benchmarks.\n",
+        "\n",
+        "These case studies cover a wide range of difficulties and complexities, from simple tabular problems to more challenging continuous control and high-dimensional tasks. This variety allows the authors to demonstrate the versatility and robustness of the Deep ADFQ algorithm across different types of reinforcement learning environments ."
+      ],
+      "metadata": {
+        "id": "us17sjNB3cNQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The Deep Assumed Density Filtering Q-learning (Deep ADFQ) algorithm incorporates both the mean and the variance of the Q-values in its decision-making process. However, the selection of actions in ADFQ is typically done by considering the trade-off between exploration and exploitation, similar to other Q-learning approaches. Here’s a more detailed explanation:\n",
+        "\n",
+        "### Action Selection in ADFQ\n",
+        "\n",
+        "1. **Thompson Sampling**: ADFQ often uses a form of Thompson Sampling to select actions. In this approach, the algorithm samples from the Q-value distribution (defined by the mean and variance) for each action and then selects the action with the highest sampled value. This naturally balances exploration and exploitation by considering the uncertainty (variance) in the Q-values.\n",
+        "   - **Sampling Q-values**: For each action \\(a\\) in state \\(s\\), sample a Q-value from the normal distribution \\(N(\\mu(s, a), \\sigma^2(s, a))\\).\n",
+        "   - **Action Selection**: Select the action with the highest sampled Q-value.\n",
+        "\n",
+        "2. **Greedy with Uncertainty Consideration**: Alternatively, the algorithm can directly incorporate both the mean and the variance in a more deterministic way. One approach is to select the action that maximizes a utility function that considers both the mean and the uncertainty (variance) of the Q-values. This utility function can be designed in various ways, such as:\n",
+        "   - **Upper Confidence Bound (UCB)**: \\(Q(s, a) = \\mu(s, a) + \\beta \\cdot \\sigma(s, a)\\), where \\(\\beta\\) is a parameter that controls the trade-off between exploration (high variance) and exploitation (high mean).\n",
+        "   - **Greedy with Minimum Variance**: Select the action with the highest mean, but in the case of ties, prefer the action with the smallest variance. This reduces the risk associated with actions having high uncertainty.\n",
+        "\n",
+        "### Example Implementation\n",
+        "\n",
+        "Here’s how you might implement the Thompson Sampling action selection in the context of the Deep ADFQ algorithm using TensorFlow:\n",
+        "\n",
+        "```python\n",
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "\n",
+        "class DeepADFQAgent:\n",
+        "    def __init__(self, state_dim, action_dim, gamma=0.99, alpha=0.1, sigma_w=0.1, lr=0.001):\n",
+        "        self.state_dim = state_dim\n",
+        "        self.action_dim = action_dim\n",
+        "        self.gamma = gamma\n",
+        "        self.alpha = alpha\n",
+        "        self.sigma_w = sigma_w\n",
+        "        \n",
+        "        self.model = DeepADFQNetwork(state_dim, action_dim)\n",
+        "        self.optimizer = tf.keras.optimizers.Adam(learning_rate=lr)\n",
+        "        self.loss_fn = tf.keras.losses.MeanSquaredError()\n",
+        "\n",
+        "    def select_action(self, state):\n",
+        "        state_tensor = tf.convert_to_tensor([state], dtype=tf.float32)\n",
+        "        mean, var = self.model(state_tensor)\n",
+        "        mean = mean.numpy()[0]\n",
+        "        var = var.numpy()[0]\n",
+        "        \n",
+        "        sampled_q_values = np.random.normal(mean, np.sqrt(var))\n",
+        "        return np.argmax(sampled_q_values)\n",
+        "    \n",
+        "    def update(self, state, action, reward, next_state, done):\n",
+        "        state_tensor = tf.convert_to_tensor([state], dtype=tf.float32)\n",
+        "        next_state_tensor = tf.convert_to_tensor([next_state], dtype=tf.float32)\n",
+        "        \n",
+        "        with tf.GradientTape() as tape:\n",
+        "            mean, var = self.model(state_tensor, training=True)\n",
+        "            next_mean, next_var = self.model(next_state_tensor, training=False)\n",
+        "\n",
+        "            mean = mean[0, action]\n",
+        "            var = var[0, action]\n",
+        "\n",
+        "            V_next_mean = tf.reduce_max(next_mean)\n",
+        "            V_next_var = tf.reduce_min(next_var)\n",
+        "            target_mean = reward + self.gamma * V_next_mean * (1 - int(done))\n",
+        "            target_var = (self.gamma ** 2) * V_next_var + self.sigma_w ** 2\n",
+        "\n",
+        "            prior_mean = mean\n",
+        "            prior_var = var\n",
+        "\n",
+        "            post_mean = (target_mean / target_var + prior_mean / prior_var) / (1 / target_var + 1 / prior_var)\n",
+        "            post_var = 1 / (1 / target_var + 1 / prior_var)\n",
+        "\n",
+        "            loss_mean = self.loss_fn(mean, post_mean)\n",
+        "            loss_var = self.loss_fn(var, post_var)\n",
+        "            loss = loss_mean + loss_var\n",
+        "\n",
+        "        grads = tape.gradient(loss, self.model.trainable_variables)\n",
+        "        self.optimizer.apply_gradients(zip(grads, self.model.trainable_variables))\n",
+        "\n",
+        "# Example usage\n",
+        "state_dim = 4  # Example state space dimension\n",
+        "action_dim = 2  # Example action space dimension\n",
+        "agent = DeepADFQAgent(state_dim, action_dim)\n",
+        "\n",
+        "# Simulate an update step\n",
+        "state = np.random.rand(state_dim)\n",
+        "action = 1\n",
+        "reward = 1\n",
+        "next_state = np.random.rand(state_dim)\n",
+        "done = False\n",
+        "\n",
+        "agent.update(state, action, reward, next_state, done)\n",
+        "action = agent.select_action(state)\n",
+        "print(f\"Selected action: {action}\")\n",
+        "```\n",
+        "\n",
+        "### Summary\n",
+        "\n",
+        "In summary, ADFQ can select actions using methods like Thompson Sampling, which naturally balances exploration and exploitation by sampling from the Q-value distributions. Alternatively, deterministic strategies like UCB can be used, where the action selection explicitly considers both the mean and variance of the Q-values to manage uncertainty. This allows ADFQ to handle environments with varying levels of stochasticity and ensure more robust learning outcomes."
+      ],
+      "metadata": {
+        "id": "lhG43Pb26hhW"
       }
     }
   ]
